fix: broken style horizontal scroll

--- a/styles/home.css
+++ b/styles/home.css
@@ -132,12 +132,12 @@ header a:hover {
 
 @media (min-width: 1300px) {
     .header-container-drops {
-        right: -10px;
+        right: 0;
     }
 }
 
 @media (min-width: 2000px) {
     .header-container-drops {
-        right: 10vw;
+        right: 0vw;
     }
 }
